# reed-chessboard

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
controller/: CMakeLists.txt  bitboard.h  communication.h  logic.h  main.c  move.h  read.h
driver/: lib.rs  main.rs  move_parser.rs  serial_communication.rs
