[package]
name = "rcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
num-traits = "0.2"
num-derive = "0.3.3"
clap = { version = "3.1.0", features = ["derive"] }


[[bin]]
name = "rcd"
path = "driver/main.rs"

[lib]
name = "rcd"
path = "driver/lib.rs"
